@@ -1,1 +1,2 @@
 from .e2data import ExportData  # noqa: F401
+from .e2filter import ExportFilter  # noqa: F401
